[project]
name = "essential-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "nbstripout>=0.8.1",
    "neo4j>=5.28.1",
    "ollama>=0.5.1",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
]
